# QueryScope

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
app/core/: config.py
backend/: .env  .env.example  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_runs_and_metrics.py  0002_add_is_baseline_to_runs.py  0003_add_sla_columns.py
backend/app/: main.py
backend/app/api/: runs.py
backend/app/core/: config.py  db.py
backend/app/models/: __init__.py  run.py
backend/app/schemas/: run.py
backend/app/services/: aggregator.py  indexer.py  rca.py  runner.py  sla.py
backend/docs/: mysql-adapter.md
backend/scripts/: create_azure_index.py
cli/: package-lock.json  package.json
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: BenchmarkForm.tsx  DiagnosePanel.tsx  LatencyChart.tsx  RunsTable.tsx
frontend/src/types/: run.ts
k8s/: backend.yaml  frontend.yaml  hpa.yaml  namespace.yaml  postgres.yaml  secret-template.yaml
mcp-server/: package-lock.json  package.json
mcp-server/src/: index.ts
