[tool.poetry]
name = "queryscope-backend"
version = "0.1.0"
description = "QueryScope FastAPI backend"
authors = []
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
pydantic-settings = "^2.2.1"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.29" }
asyncpg = "^0.29.0"
alembic = "^1.13.1"
greenlet = "^3.3.2"
numpy = "^2.4.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
